Fix alignment in Buy more shares chart (4)

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -792,21 +792,7 @@ p {
         margin-top: 68px;
 
         .buy-more-shares.box-container {
-            height: 787px;
             box-sizing: border-box;
-
-            .shares-mobile {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }
-
-            .shares-chart {
-                position: absolute;
-                top: 260px;
-            }
         }
 
         .box-container {
@@ -855,9 +841,26 @@ $mobile_bp: 650px;
     }
 }
 
+@media only screen and (min-width: 1330px) {
+    .d-desktop-none {
+        display: none;
+    }
+}
 @media only screen and (min-width: $tablet_bp) {
     .d-desktop-block {
         display: block;
+    }
+}
+
+@media only screen and (max-width: $mobile_bp) {
+    .available-shares {
+        flex-direction: column;
+
+        .shares-chart {
+            display: flex;
+            align-self: center;
+            width: 160px;
+        }
     }
 }
 
@@ -872,6 +875,65 @@ $mobile_bp: 650px;
     }
 }
 
+@media only screen and (max-width: 1330px) {
+
+    .d-tablet-mobile-none {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1330px) {
+
+    .buy-more-shares {
+        width: 100%;
+
+        .shares-mobile {
+            width: 100%;
+
+            .available-shares {
+                width: 100%;
+                justify-content: space-between;
+        
+                .shares-chart {
+                    width: 240px;
+                } 
+            }
+        }
+    }
+
+    .buy-more-shares .shares-mobile .buy-shares-input .labeled_input {
+        margin-top: 0;
+    }
+
+}
+
+@media only screen and (min-width: 1330px) {
+    .buy-more-shares {
+        .shares-mobile {
+            width: 100%;
+            max-width: 500px;
+        }
+        
+        .shares-chart {
+            min-width: 350px;
+        }
+    }
+}
+
 .position-relative {
     position: relative;
+}
+
+.buy-more-shares {
+    display: flex;
+    justify-content: space-between;
+}
+
+.shares-mobile .available-shares {
+    display: flex;
+    width: 100%;
+
+    .shares-chart {
+        min-width: 350px;
+    }
 }
